syntax = "proto3";

option go_package = "./pb";

package pb;

service CryptoCurrency {
  // 开卡
  rpc CryptoCurrency(CryptoCurrencyArgs) returns (CryptoCurrencyReply) {}

}
message CryptoCurrencyArgs {
  int64 UID = 1; //UID
}

message CryptoCurrencyReply {

}
